# my-blogging-app

./: PRD.md  README.md  USER_STORIES.md
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 78b34f51f517_initial_migration.py  bbd9da9d01fa_add_user_profile_fields.py  c21769cd7ad4_set_default_created_at_for_existing_.py
backend/app/api/: auth.py  posts.py  users.py
backend/app/core/: auth.py  users.py
backend/app/db/: session.py
backend/app/models/: post.py  user.py
backend/app/schemas/: post.py  user.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.js  page.js
frontend/src/app/auth/login/: page.js
frontend/src/app/auth/register/: page.js
frontend/src/app/author/[username]/: page.js
frontend/src/app/dashboard/: page.js
frontend/src/app/posts/: page.js
frontend/src/app/posts/[id]/: page.js
frontend/src/app/posts/[id]/edit/: page.js
frontend/src/app/posts/new/: page.js
frontend/src/app/profile/: page.js
frontend/src/components/: Header.js  ProtectedRoute.js
frontend/src/components/ui/: Alert.js  Button.js  Input.js
frontend/src/lib/: auth.js  validations.js
frontend/src/store/: auth.js
